--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <title>Cuisine Book</title>
   </head>
   <body>
+    <!-- header section  -->
     <header>
       <a href="#nav" id="menu-ico"
         ><img src="https://cdn-icons-png.flaticon.com/512/1828/1828551.png"
@@ -22,7 +23,7 @@
           <h1>Cuisine Book</h1>
         </div></a
       >
-
+<!-- nav bar  -->
       <nav id="nav">
         <a id="close-btn" href="#main"
           ><img src="https://cdn-icons-png.flaticon.com/512/1828/1828778.png"
@@ -35,11 +36,13 @@
             <h1>Cuisine Book</h1>
           </div></a
         >
+        <!-- menu items -->
         <ul class="menu">
           <li><a href="./index.html">Home</a></li>
           <li><a href="./favourites.html">Favorites</a></li>
           <li><a href="#">About</a></li>
         </ul>
+<!-- social icons  -->
         <ul id="social-icons">
           <li>
             <a href="" class="social-icon"> <i class="fa fa-facebook"></i></a>
